--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,6 +1,10 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    
+    font-family: 'Oswald', sans-serif;
+    background-image: url("assets/images/bgImage.jpg");
+    background-color: lightblue;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #wrapper {
@@ -8,5 +12,5 @@ body {
 }
 
 h1 {
-    
+    font-family: 'Notable', sans-serif;
 }
